--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,3 +2,7 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins%3Awght%40100%3B200%3B300%3B400&display=swap%27%29%3B');
+
+*{
+    color: black;
+}
